# bong

./: .gitignore  .mailmap  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  version.py
.github/: tests.yml
.github/workflows/: tests.yaml  tests.yml
bong/: agents.py  base.py  custom_types.py  jobs_util.py  kpm.py  settings.py  types.py  util.py
bong/deprecated/: agents.py  expts.txt  expts_old.txt  job_utils.py  linreg.py  linreg_data.py  linreg_run.py  logreg_run.py  make_jobs_for_timing.py  mlpreg_data.py  plot_jobs.py  plot_utils.py  plot_utils_old.py  run_jobs.py  run_parallel.py
bong/experiments/: average_jobs.py  cmds.txt  copy_jobs.py  datasets.py  demo.ipynb  do_job.py  do_jobs.py  eval_jobs.py  exclude_jobs.py  expts.txt  expts_old.txt  find_best_jobs.py  job_utils.py  kpm_linreg.py  kpm_logreg.py  linreg.py  linreg_data.py  linreg_run.py  logreg.py  logreg_demo.ipynb  logreg_run.py  lstsq_jax.py  main.py  make_jobs.py  make_jobs_agentXmodel.py  make_jobs_for_sweep.py  make_jobs_for_timing.py  make_jobs_multi_sweep.py  make_jobs_sweep.py  mlp_data.py  mlpreg_data.py  mnist_clf.py  models.py  plot_averages.py  plot_jobs.py  plot_times.py  plot_utils.py  process_jobs.py  run_job.py  run_jobs.py  (+14 more)
bong/experiments/old/: expts.txt  linreg.py  plot_jobs.py  plot_utils_old.py  run_parallel.py
bong/experiments_parallel/: average_jobs.py  cmds.txt  copy_jobs.py  do_job.py  eval_jobs.py  exclude_jobs.py  expts.txt  find_best_jobs.py  job_utils.py  lstsq_jax.py  make_jobs.py  plot_averages.py  plot_times.py  score_utils.py
bong/results/A:Any-P:fc-Lin:0-LR:Any-IT:10-MC:100-EF:1-R:0/: cmds.csv  jobs.csv  summary.csv
bong/src/: __init__.py  bbb.py  blr.py  bog.py  bong.py  dataloaders.py  experiment_utils.py  states.py
bong/tests/: test_bong.py
(+38 files in other folders)
