[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [
  {name = "Peter G. Chang", email = "peter0414@gmail.com"},
  {name = "Gerardo Durán-Martín"},
  {name = "Matt Jones"},
  {name = "Alex Shestopaloff"},
  {name = "Kevin P. Murphy", email = "murphyk@gmail.com"}
]
dependencies = [
  "chex>=0.1.86",
  "dynamax",
  "flax>=0.8.0",
  "jax>=0.4.21",
  "jaxlib>=0.4.21",
  "jax-tqdm>=0.1.0",
  "matplotlib>=3.8.2",
  "numpy==1.26.0",
  "optax>=0.1.7",
  "optuna>=3.6.1",
  "pandas>=2.1.3",
  "pytz",
  "seaborn>=0.13.0",
  "tensorflow",
  "tensorflow-probability>=0.24.0",
  "tensorflow-datasets",
  "tqdm>=4.66.1",
  "ucimlrepo>=0.0.6"
]
description = "Bayesian Online Natural Gradient"
dynamic = ["version"]
name = "bong"
requires-python = ">=3.11.0rc1"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "refurb",
  "ruff",
  "ipykernel",
  "pytest"
]

[project.urls]
issues = "https://github.com/petergchang/bong/issues"
repository = "https://github.com/petergchang/bong"

[tool.setuptools_scm]
version_file = "version.py"
